# obake

./: .gitattributes  .gitignore  LICENSE  README.md
ansible/: SETUP.md  inventory.ini  playbook.yaml
host/: SETUP.md
host/jack/: adat.conf  aes67.conf  jack@.service  mixpre.conf  usbpre.conf
host/udev/: 50-mixpre6.rules  51-usbpre2.rules  58-push2.rules  59-monome.rules
launcher/: Cargo.toml  build.rs  obake.toml  setup.toml
launcher/src/: config.rs  main.rs  setup.rs
shapes/chuck/: build-args.txt  chuck.def
shapes/mod-host/: mod-host.def
shapes/rnbo-runner/: .gitattributes  conan-x86_64-default  rnbo-runner.def  rnbo-src-1.3.4.tgz
shapes/serialosc/: README.md  serialosc.def
shapes/siren/: Makefile  README.md  TODO.md  siren-base.def  siren-init.lisp  siren-sbcl.def  siren.bin.asd
