[package]
name = "obake-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4.28"
tokio = { version = "1.0", features = ["full"] }
systemd-zbus = { version = "5.3.2", features = ["async-io"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
git2 = "0.18"

[dev-dependencies]
tempfile = "3.8"
